# scribebox

./: LICENSE  README.md  pyproject.toml
src/scribebox/: __init__.py  backends.py  cli.py  config.py  core.py  errors.py  exceptions.py  ffmpeg.py  media.py  pdf.py  service.py  transcript.py  types.py  validators.py  webapp.py  youtube.py
src/scribebox/transcribe/: __init__.py  base.py  factory.py  faster_whisper_impl.py  whisper_impl.py
tests/: test_cli.py  test_core.py  test_core_progress.py  test_media.py  test_pdf.py  test_service_pipeline.py  test_transcript_pdf.py  test_validators.py
