[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "scribebox"
version = "0.2.1"
description = "Local-first transcription: YouTube URL or audio file (mp3/mp4) -> TXT and optional PDF."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Scribebox Contributors" }]
dependencies = [
  "pydantic>=2.6",
  "fastapi>=0.110",
  "uvicorn>=0.23",
  "reportlab>=4.0",
  "python-multipart>=0.0.9",
  "tqdm>=4.66",
]

[project.scripts]
scribebox = "scribebox.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
  "mypy>=1.10",
]

youtube = [
  "yt-dlp>=2024.7.9",
]

faster-whisper = [
  "faster-whisper>=1.2.0; python_version < '3.13'",
]

whisper = [
  "openai-whisper>=20231106",
]

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_unreachable = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
